implicit groupIds and rudimentary pluginManagement support.